--- a/Chinook Dataset.ipynb
+++ b/Chinook Dataset.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03d03621-ae6a-4f5c-9a78-ce39a34a1644",
+   "metadata": {},
+   "source": [
+    "### Step 1: Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6ad8e87e-125a-49e3-81e3-52f84774b451",
@@ -20,6 +28,14 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b919c5a-d03f-48ee-b883-74c168a81db7",
+   "metadata": {},
+   "source": [
+    "### Step 2: Load Data"
    ]
   },
   {
@@ -38,6 +54,14 @@
     "# Helper function to run SQL queries\n",
     "def run_query(query):\n",
     "    return pd.read_sql_query(query, conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52a8bc22-114c-4d59-b0a7-fd327001495a",
+   "metadata": {},
+   "source": [
+    "### Step 3: Explore the Data"
    ]
   },
   {
@@ -159,13 +183,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a908c719-f0cd-4ddb-bd17-67833c10ca7a",
+   "cell_type": "markdown",
+   "id": "533e2e0d-25dd-4596-9457-60b874a0243e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Start Exploring Relationships"
+    "### Step 4: Start Exploring Relationships"
    ]
   },
   {
@@ -375,6 +397,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26baefc6-4eb0-4220-bf34-fdd9e3cc1938",
+   "metadata": {},
+   "source": [
+    "### Step 5: Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "e824f7e8-e2a1-4142-8dd1-7d5203f5cc08",
@@ -424,6 +454,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "718d8a84-6169-40a1-a82b-37ab1bc62b43",
+   "metadata": {},
+   "source": [
+    "### Step 6: Close Connection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "260106f3-4e3e-4bf9-ab29-7c1a432e8222",
@@ -451,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
